Fix scrollable overflow

--- a/src/components/semantic-assets/AssetDetails/summary/AssetDetailsSummary.module.css
+++ b/src/components/semantic-assets/AssetDetails/summary/AssetDetailsSummary.module.css
@@ -9,12 +9,7 @@
 
 .scrollable {
   height: 170px;
-  overflow: visible;
-}
-
-.scrollable:hover {
-  height: 170px;
-  overflow-y: scroll;
+  overflow: auto;
 }
 
 .descriptionText {
